스크롤 관련 api 수정